<resources>
    <string name="app_name">Weather App</string>
    <string name="weather_app_key">ef45b67ce37bc90f449323894302c562</string>
    <string name="Home">Home</string>
    <string name="Favourite">Favourite</string>
    <string name="Alert">Alert</string>
    <string name="Setting">Setting</string>
    <string name="location">Location :</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="Gps">gps</string>
    <string name="Map">map</string>
    <string name="language">Language :</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="ar">ar</string>
    <string name="en">en</string>
    <string name="alert">Alert :</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="Alarm">alarm</string>
    <string name="Notify">Notify</string>
    <string name="unit">Units :</string>
    <string name="standard">Standard</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="standard_details">Standard:\n(Temp:Kelvin) , (Wind speed:meter/sec)</string>
    <string name="metric_details">Metric:\n(Temp:Celsius) , (Wind speed:meter/sec)</string>
    <string name="imperial_details">Imperial:\n(Temp:Fahrenheit) , (Wind speed:miles/hour)</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="cloud">Cloud</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="need_permission">Need Permission</string>
    <string name="permission_message">the app does not work without location permission</string>
    <string name="ok">Ok</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="check_permission_grantee_n_check_location_status_n_check_internet_connection">Check Permission grantee \n Check Location Status \n Check Internet Connection</string>
    <string name="map_api_key">AIzaSyAN-HL6BTQZo5JdYmBa1ZhsXjTO4k5J3IA</string>
    <string name="save">save</string>
    <string name="google_map">Google Map</string>
    <string name="reload">reload</string>
    <string name="weather_app_alarm">Weather App alarm</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="it_is_time_to_know_weather_news">it is time to know weather news</string>
</resources>