<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Home" />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Favourite" />
    <item
        android:id="@+id/alertFragment"
        android:icon="@drawable/baseline_add_alert_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Alert" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/baseline_settings_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Setting" />
</menu>