<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SettingFragment"
    android:paddingTop="@dimen/_12sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_16sdp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:text="@string/location" />
            <RadioGroup
                android:id="@+id/location_RG"
                android:layout_width="0dp"
                app:layout_constraintStart_toEndOf="@id/location"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/location"
                app:layout_constraintTop_toTopOf="@id/location">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gps"
                    android:text="@string/gps"
                    android:textSize="@dimen/_12ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/map"
                    android:text="@string/map"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_32sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_16sdp"        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:text="@string/language" />
            <RadioGroup
                android:id="@+id/language_RG"
                android:layout_width="0dp"
                app:layout_constraintStart_toEndOf="@id/lang"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/lang"
                app:layout_constraintTop_toTopOf="@id/lang">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/ar"
                    android:text="@string/arabic"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/en"
                    android:text="@string/english"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_16sdp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:text="@string/alert" />
            <RadioGroup
                android:id="@+id/alert_RG"
                android:layout_width="0dp"
                app:layout_constraintStart_toEndOf="@id/alert"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/alert"
                app:layout_constraintTop_toTopOf="@id/alert">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/alarm"
                    android:text="@string/alarm"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/notify"
                    android:text="@string/notification"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_16sdp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:text="@string/unit" />
            <RadioGroup
                android:id="@+id/units_RG"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/units"
                android:layout_marginStart="@dimen/_8sdp"
               >
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/standard"
                    android:text="@string/standard"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/metric"
                    android:text="@string/metric"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/imperial"
                    android:text="@string/imperial"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.appcompat.widget.LinearLayoutCompat>
