<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="currentWeatherData"
            type="com.example.weather_app_iti.model.local.CurrentWeatherData" />

    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:context=".view.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/city_name"
                android:text="@{currentWeatherData.city}"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_18ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:text="@{currentWeatherData.date + currentWeatherData.time}"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/city_name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/main_cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_175sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:padding="@dimen/_16sdp"
                app:cardCornerRadius="@dimen/_16sdp"
                app:cardElevation="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/date">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:visibility="visible" />
                    <TextView
                        android:id="@+id/weather_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@{currentWeatherData.weatherDescription}"
                        android:textAlignment="center"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{currentWeatherData.temperature}"
                        android:textAlignment="center"
                        android:textSize="@dimen/_48ssp"
                        app:layout_constraintTop_toBottomOf="@id/weather_description" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintTop_toBottomOf="@id/main_cardView"
                app:layout_constraintBottom_toBottomOf="@id/main_cardView"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/temp_3hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/list3hours_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/icon" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/temp_5days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/list5days_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/temp_3hours" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_175sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:padding="@dimen/_16sdp"
                app:cardCornerRadius="@dimen/_16sdp"
                app:cardElevation="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/temp_5days">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/pressure"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/_8sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/wind"
                        app:layout_constraintEnd_toStartOf="@id/humidity"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/pressure"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12ssp"
                            android:text="@{currentWeatherData.preesure}"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/humidity"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/_8sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/cloud"
                        app:layout_constraintStart_toEndOf="@id/wind"
                        app:layout_constraintEnd_toEndOf="parent">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/humidity"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{currentWeatherData.humidity}"
                            android:textSize="@dimen/_12ssp"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/wind"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/pressure"
                        app:layout_constraintEnd_toStartOf="@id/humidity"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/wind"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{currentWeatherData.windSpeed}"
                            android:textSize="@dimen/_12ssp"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cloud"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/humidity"
                        app:layout_constraintStart_toEndOf="@id/wind"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/cloud"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{currentWeatherData.clouds}"
                            android:textSize="@dimen/_12ssp"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cloud"
                            android:textAlignment="center" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>